fix: add width and height, to prevent layout shift

--- a/src/pages/Pricing/Pricing.module.css
+++ b/src/pages/Pricing/Pricing.module.css
@@ -14,10 +14,6 @@
   margin: 6rem auto;
 }
 
-.pricing img {
-  width: 100%;
-}
-
 .pricing h2 {
   margin-bottom: 3rem;
   font-size: 4rem;
