--- a/src/pages/Product/Product.module.css
+++ b/src/pages/Product/Product.module.css
@@ -14,10 +14,6 @@
   margin: 6rem auto;
 }
 
-.product img {
-  width: 100%;
-}
-
 .product h2 {
   margin-bottom: 3rem;
   font-size: 4rem;
